fixed images on mobile

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -54,6 +54,13 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 32px;
+
+    @media (max-width: 700px) {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 32px;
+    }
   }
 
   &__image {
@@ -75,6 +82,10 @@
     &--1 {
       position: relative;
       top: 50%;
+
+      @media (max-width: 700px) {
+        top: 0;
+      }
     }
 
     &--3 {
